Bug 1653160 - Avoid re-raising the PuppetWidget of an already-focused OOP iframe upon click. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D87859